# kbench

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  INSTALL.md  LICENSE  README.md  cpu_pinned_requirements.txt  cross_model_pinned_requirements.txt  pyproject.toml  qwen_pinned_requirements.txt  reproduce.sh
assets/: manifest.json
chcons/: agent.py  api_agent.py  audit.py  inject.py  metrics.py  pii.py  rag.py  unlearn.py
chcons/methods/: TEMPLATE_adapter.py  __init__.py  cha_adapter.py  depn_adapter.py  eco_adapter.py  falcon_adapter.py  leace_adapter.py  mlp_probe_adapter.py  o3_adapter.py  repe_adapter.py  rlace_adapter.py
configs/: rag_pilot.yaml  rag_smoke_mac.yaml
data/: LICENSE
docs/: COMPUTE.md  DATASHEET.md  LEADERBOARD.md  METRICS.md  inferential_plan_v2.md  protocol_amendments.md
scripts/: 00_build_rag_index.py  00b_inject_pii_corpus.py  00c_test_v2_retrieval.py  00d_build_distractor_pool.py  01_generate_pii.py  02_baseline_leakage.py  03_inject_pii.py  07_mcnemar_analysis.py  08_rescore_raw_full.py  09_k_verdict.py  09_k_verdict_v2.py  10_compute_z_rag_oracle.py  11_rescore_z_tool_wide.py  12_linear_probe_pii.py  14_synthesize_control_data.py  15_train_control_adapter.py  16_d9_post_hoc_audit.py  17_tofu_style_eval.py  18_muse_style_eval.py  19_convert_lume_to_kbench.py  19_convert_pii_to_openunlearn.py  20_merge_target.py  20b_gen_faithful_data.py  21_tofu_faithful.py  22_muse_faithful.py  23_aggregate_benchmark.py  24_wmdp_mcq.py  cer_rederivation_check.py  kbench.py  kscore.py  kscore_crossmodel.py  smoke_report.py
(+14 files in other folders)
