[project]
name = "kbench"
version = "1.0.0"
description = "K-Bench: multi-channel substrate-aware adaptive-attacker benchmark for LLM unlearning in agentic deployments"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3", "scipy>=1.14", "scikit-learn>=1.5", "pyyaml>=6,<7",
  "datasets>=3.0", "torch>=2.4", "transformers>=4.45", "peft>=0.13",
  "accelerate>=1.0", "sentence-transformers>=3", "faiss-cpu>=1.13,<2",
  "faker>=30", "sentencepiece>=0.2", "rouge-score>=0.1.2,<0.2", "requests>=2.32,<3",
]

[project.optional-dependencies]
infer = ["vllm>=0.6"]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chcons"]
